avoiding rent payment to bankrupt players and minor refactoring